--- a/.github/workflows/hello-workflow.yml
+++ b/.github/workflows/hello-workflow.yml
@@ -9,3 +9,4 @@ jobs:
       env:
         REF: ${{ github.ref }}
         WORKSPACE: ${{ github.WORKSPACE }}
+        GITHUB_CONTEXT: ${{ toJson(github) }}
