--- a/.github/workflows/hello-workflow.yml
+++ b/.github/workflows/hello-workflow.yml
@@ -7,6 +7,6 @@ jobs:
     steps:
     - run: echo "Hello"
       env:
+        TAG: ${REF##*/}
         REF: ${{ github.ref }}
-        WORKSPACE: ${{ github.WORKSPACE }}
         GITHUB_CONTEXT: ${{ toJson(github) }}
