--- a/.github/workflows/hello-workflow.yml
+++ b/.github/workflows/hello-workflow.yml
@@ -7,6 +7,6 @@ jobs:
     steps:
     - run: echo "Hello"
       env:
-        TAG: ${REF##*/}
+        TAG: ${{ ${REF##*/} }}
         REF: ${{ github.ref }}
         GITHUB_CONTEXT: ${{ toJson(github) }}
