--- a/.github/workflows/hello-workflow.yml
+++ b/.github/workflows/hello-workflow.yml
@@ -5,6 +5,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+    - uses: actions/checkout@v1
     - run: ls -al ${{ github.workspace }}
     - name: save context
       run: echo ${GITHUB_CONTEXT} > /tmp/context.json
