--- a/.github/workflows/hello-workflow.yml
+++ b/.github/workflows/hello-workflow.yml
@@ -15,6 +15,8 @@ jobs:
         GITHUB_CONTEXT: ${{ toJson(github) }}
     - name: read context
       run: cat /tmp/context.json
+
+    - run: echo ${GITHUB_REF}
     - name: save ref
       run: echo ${REF#refs/*/} > /tmp/ref.txt
       env:
