--- a/.github/workflows/hello-workflow.yml
+++ b/.github/workflows/hello-workflow.yml
@@ -31,6 +31,8 @@ jobs:
       run: curl -LO https://github.com/github/hub/releases/download/v2.12.3/hub-darwin-amd64-2.12.3.tgz
     - run: tar xf hub-darwin-amd64-2.12.3.tgz
     - run: hub-darwin-amd64-2.12.3/bin/hub release create -a release-template.json -m 'release via actions' -t v0.0.1 v0.0.1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Create a new release
       run: sed -e "s!PLACEHOLDER_TAG_NAME!${GITHUB_REF#refs/*/}!g" release-template.json > /tmp/release.json
