--- a/.github/workflows/basic-01-environment.yml
+++ b/.github/workflows/basic-01-environment.yml
@@ -16,7 +16,7 @@ jobs:
     strategy:
       matrix:
         os: [macOS-latest, ubuntu-latest]
-    runs-on: $ # runs on each `os`
+    runs-on: ${{ matrix.os }} # runs on each `os`
 
     steps:
     - uses: actions/checkout@v1
