--- a/.github/workflows/basic-01-environment.yml
+++ b/.github/workflows/basic-01-environment.yml
@@ -29,5 +29,5 @@ jobs:
 
     # See also:
     # - https://help.github.com/en/articles/virtual-environments-for-github-actions#environment-variables
-    - run: echo ${GITHUB_REF} > /tmp/ref.txt
-    - run: echo ${GITHUB_REF#refs/*/} > /tmp/branch-or-tag.txt
+    - run: echo ${GITHUB_REF}
+    - run: echo ${GITHUB_REF#refs/*/}
