--- a/.github/workflows/docker-01-build.yml
+++ b/.github/workflows/docker-01-build.yml
@@ -5,12 +5,31 @@ on:
     branches:
       - master
       - docker-*
-  pull_request:
+    tags:
+      - docker-*
 
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v1
+
     - name: Generate the tag for current build
-      run: export TAG=${GITHUB_REF#refs/*/}; echo docker.pkg.github.com/${{ github.repository }}/docker-01-build:${TAG/master/latest}
+      run: export TAG=${GITHUB_REF#refs/*/}; echo docker.pkg.github.com/${{ github.repository }}/docker-01-build:${TAG/master/latest} > /tmp/tag-for-docker.txt
+    - name: Build the Docker image
+      run: docker build Dockerfile.d/docker-01-build/ --tag $(cat /tmp/tag-for-docker.txt)
+
+    # You should generate a GITHUB_TOKEN with `write:packages` permission
+    # and store it to the `/settings/secrets` with another variable name on the repository.
+    # (e.g. `GITHUB_TOKEN_TO_PUSH_TO_PACKAGE_REGISTRY`)
+    # Because GitHub creates the GITHUB_TOKEN secret for you by default,
+    # but that not permited to push to GitHub Package Registry.
+    # See also:
+    # - https://help.github.com/en/articles/virtual-environments-for-github-actions#github_token-secret
+    # - https://help.github.com/en/articles/virtual-environments-for-github-actions#token-permissions
+    - name: Login to GitHub Package Registry
+      run: docker login docker.pkg.github.com -u ${GITHUB_REPOSITORY/*} -p $GITHUB_TOKEN
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN_TO_PUSH_TO_PACKAGE_REGISTRY }}
+    - name: Push the Docker image to GitHub Package Registry
+      run: docker push $(cat /tmp/tag-for-docker.txt)
