--- a/.github/workflows/docker-01-build.yml
+++ b/.github/workflows/docker-01-build.yml
@@ -29,7 +29,7 @@ jobs:
     # - https://help.github.com/en/articles/virtual-environments-for-github-actions#token-permissions
     # - https://help.github.com/en/articles/creating-a-personal-access-token-for-the-command-line
     - name: Login to GitHub Package Registry
-      run: docker login docker.pkg.github.com -u ${GITHUB_REPOSITORY/*} -p $GITHUB_TOKEN
+      run: docker login docker.pkg.github.com -u mazgi -p $GITHUB_TOKEN
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN_TO_PUSH_TO_PACKAGE_REGISTRY }}
     - name: Push the Docker image to GitHub Package Registry
