--- a/.github/workflows/xcode-02-with-docker.yml
+++ b/.github/workflows/xcode-02-with-docker.yml
@@ -11,6 +11,10 @@ on:
 jobs:
   build:
     runs-on: macos-latest
+
+    container:
+      image:  node:10.16-jessie
+
     steps:
     - uses: actions/checkout@master
     - name: Set Node.js 10.x
