--- a/.github/workflows/xcode-02-with-docker.yml
+++ b/.github/workflows/xcode-02-with-docker.yml
@@ -14,22 +14,22 @@ jobs:
     steps:
     - uses: actions/checkout@master
     - run: uname -a > uname.macos
-      working-directory: ./working
+      working-directory: ./dummy
     - run: ls -al
-      working-directory: ./working
+      working-directory: ./dummy
     - run: cat uname.*
-      working-directory: ./working
+      working-directory: ./dummy
 
   build-on-ubuntu:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@master
     - run: uname -a > uname.ubuntu
-      working-directory: ./working
+      working-directory: ./dummy
     - run: ls -al
-      working-directory: ./working
+      working-directory: ./dummy
     - run: cat uname.*
-      working-directory: ./working
+      working-directory: ./dummy
 
   build-on-docker:
     runs-on: ubuntu-latest
@@ -38,12 +38,12 @@ jobs:
     steps:
     - uses: actions/checkout@master
     - run: echo '{}' > package.json
-      working-directory: ./working
+      working-directory: ./dummy
     - run: npm install
-      working-directory: ./working
+      working-directory: ./dummy
     - run: ls -al
-      working-directory: ./working
+      working-directory: ./dummy
     - run: cat uname.*
-      working-directory: ./working
+      working-directory: ./dummy
     - run: cat package*
-      working-directory: ./working
+      working-directory: ./dummy
