--- a/.github/workflows/xcode-02-with-docker.yml
+++ b/.github/workflows/xcode-02-with-docker.yml
@@ -13,5 +13,7 @@ jobs:
     runs-on: macos-latest
     steps:
     - uses: actions/checkout@master
-    - run: brew cask install docker
-    - run: docker info
+    steps:
+    - run: uname -a > ./dummy/uname.macos
+    - publish: dummy
+      artifact: Dummy
